# IdentiTwin

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  run_simulation_linux.sh  run_system_linux.sh
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/modules/: calibration.rst  configurator.rst  event_monitoring.rst  performance_monitor.rst  processing_analysis.rst  processing_data.rst  report_generator.rst  state.rst  system_monitoring.rst
examples/: initialization.py  processing_analysis.py  run.sh  run_example.bat  run_simulation.sh  run_system.sh
examples/repository/20250416/: displacements.csv
examples/repository/20250416/events/20250416_134120/: acceleration.csv  data.npz  displacements.csv  report_20250416_134120.txt
examples/repository/20250416/events/20250416_134400/: acceleration.csv  data.npz  displacements.csv  report_20250416_134400.txt
examples/repository/20250416/logs/: calibration_data.txt
examples/repository/20250416/reports/: system_report.txt
examples/repository/20250421/: displacements.csv
examples/repository/20250421/logs/: calibration_data.txt
examples/repository/20250421/reports/: system_report.txt
examples/repository/20250422/: displacements.csv
examples/repository/20250422/events/20250422_102157/: acceleration.csv  data.npz  displacements.csv  report_20250422_102157.txt
examples/repository/20250422/events/20250422_102213/: acceleration.csv  data.npz  displacements.csv  report_20250422_102213.txt
examples/repository/20250422/events/20250422_102251/: acceleration.csv  data.npz  displacements.csv  report_20250422_102251.txt
examples/repository/20250422/events/20250422_102609/: acceleration.csv  data.npz  displacements.csv  report_20250422_102609.txt
examples/repository/20250422/events/20250422_102726/: acceleration.csv  data.npz  displacements.csv  report_20250422_102726.txt
examples/repository/20250422/events/20250422_102927/: acceleration.csv  data.npz  displacements.csv  report_20250422_102927.txt
examples/repository/20250422/events/20250422_103016/: acceleration.csv  data.npz  displacements.csv  report_20250422_103016.txt
examples/repository/20250422/events/20250422_103047/: acceleration.csv  data.npz  displacements.csv  report_20250422_103047.txt
examples/repository/20250422/events/20250422_111610/: acceleration.csv  data.npz  displacements.csv  report_20250422_111610.txt
examples/repository/20250422/events/20250422_130747/: acceleration.csv  data.npz  displacements.csv
examples/repository/20250422/events/20250422_130811/: acceleration.csv  data.npz  displacements.csv
examples/repository/20250422/logs/: calibration_data.txt
examples/repository/20250422/reports/: system_report.txt
examples/repository/20250425/: acceleration.csv  displacements.csv  general_measurements.csv
examples/repository/20250425/logs/: calibration_data.txt
examples/repository/20250425/reports/: system_report.txt
examples/repository/20250426/logs/: calibration_log.txt
examples/repository/20250426/reports/: system_report.txt
setup_env/: setup_env.bat  setup_env.sh
src/identitwin/: __init__.py  calibration.py  configurator.py  event_monitoring.py  performance_monitor.py  processing_analysis.py  processing_data.py  report_generator.py  simulator.py  state.py  system_monitoring.py  visualization.py
(+39 files in other folders)
