[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "identitwin"
version = "0.0.10"
description = "A Tool to setup a Raspberri Pi for Structural Health Monitoring accelerations and displacements"
authors = [
    { name = "Angel Navarro-Mora", email = "ahnavarro@itcr.ac.cr" },
    { name = "Alvaro Perez-Mora", email = "alvaroenrique2001@estudiantec.cr" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requirements-parser>=0.5.0"]

[tool.setuptools]
packages = ["identitwin"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
identitwin = ["tests/*.py"]

[tool.setuptools.dynamic]
dependencies = ["requirements.txt"]