[tool.poetry]
name = "identitwin"
version = "0.0.66"
description = "Digital Twin system for structural monitoring."
authors = ["Your Name <you@example.com>"] # Replace with actual author info
readme = "README.md" # Assuming you have a README.md

[tool.poetry.dependencies]
python = "^3.8" # Specify compatible Python versions
numpy = "*"
matplotlib = "*"
colorama = "*"

# Optional dependencies defined as extras
psutil = { version = "*", optional = true }
gpiozero = { version = "*", optional = true }
adafruit-circuitpython-ads1x15 = { version = "*", optional = true }
adafruit-blinka = { version = "*", optional = true } # Required by Adafruit libraries on Linux
mpu6050-raspberrypi = { version = "*", optional = true }


[tool.poetry.extras]
performance = ["psutil"]
hardware = ["gpiozero", "adafruit-circuitpython-ads1x15", "adafruit-blinka", "mpu6050-raspberrypi"]
all = ["psutil", "gpiozero", "adafruit-circuitpython-ads1x15", "adafruit-blinka", "mpu6050-raspberrypi"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Add other sections as needed, e.g., [tool.poetry.dev-dependencies] for testing tools